[project]
name = "labautomation-utils"
version = "0.0.0"
authors = [
  { name="Erik Trygg", email="etrg@novonordisk.com" },
]
description = "Lab automation utility package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "regex",
]

[project.optional-dependencies]
dev = [
    "black",
    "bumpver",
    "isort",
]

[build-system]
requires = ["setuptools>61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["labautomation_utils*"]


[tool.isort]
profile = "black"

[tool.bumpver]
current_version = "0.1.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "v{new_version}"
tag_scope = "default"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]